@@ -1,0 +1,4 @@
+<div class="order_conditions<?php echo $this->attributes; ?>">
+<?php echo $this->hidden; ?>
+<?php echo $this->fields; ?>
+</div>
