@@ -15,6 +15,7 @@ Version 0.3.beta1
 - Added multi-edit support for products and variant data
 - Added minimum order subtotal amount (store config option)
 - Added sku to email product template
+- Added iso_checkout_order_conditions template
 - Added: Copy child records (variants, languages) when copying a product
 - Added: Allow foreignKey for variant attribute options
 - Added: Show theme templates in product type select menu
